<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        tools:context="com.alltaskesnew.thecalclatur.screens.AddOutlayActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/bar_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            app:cardBackgroundColor="@color/violet"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/munth_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:fontFamily="@font/homefont"
                        android:text="@string/select_month"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <ImageView
                        android:id="@+id/img_back"
                        android:layout_width="45dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/homefont"
                        app:srcCompat="@drawable/ic_back"
                        android:textColor="@color/white" />

                    <ImageView
                        android:id="@+id/add_img"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/homefont"
                        android:textColor="@color/white"
                        app:srcCompat="@drawable/ic_baseline_add_24" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/liner_texts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@color/bluelighit"
                    android:orientation="horizontal"
                    android:weightSum="8">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/homefont"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/tasnif"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@color/yallow"
                        app:layout_constraintTop_toBottomOf="@id/ed_tyb" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:fontFamily="@font/homefont"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/mablk"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <View
                        android:id="@+id/line2"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="2dp"
                        android:background="@color/yallow"
                        app:layout_constraintTop_toBottomOf="@id/ed_tyb" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/homefont"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/day"
                        android:textColor="@color/white"
                        android:textSize="17dp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/card_results"
            android:layout_below="@id/bar_add"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#edebe9"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_rc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@null"
                    app:cardBackgroundColor="@color/whitelighit"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rc_menu"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/whitelighit">

                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/tv_isemptty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_no_outaly"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="50dp"
                    android:textColor="@color/violet"
                    android:text="@string/no_outly"
                    android:fontFamily="@font/homefont"
                    android:layout_gravity="center"

                   />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/bluelighit"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:weightSum="3">

                <LinearLayout


                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.30"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_results"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/homefont"
                        android:padding="5dp"
                        android:text="00.00"
                        android:drawablePadding="3dp"
                        android:drawableLeft="@drawable/ic_dollar"
                        android:textColor="@color/white"
                        android:textSize="22dp" />


                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/line5"
                    android:layout_width="5dp"
                    app:cardCornerRadius="5dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                   app:cardBackgroundColor="@color/white"
                    app:cardElevation="@null"

                    app:layout_constraintTop_toBottomOf="@id/ed_tyb" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.70"
                    android:gravity="center"

                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/homefont"
                        android:text="@string/all_outaly"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/homefont"
                        android:text="@string/in_month"
                        android:textColor="@color/yallow"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</layout>