<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.alltaskesnew.thecalclatur.fragments.OutlayManthFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                app:cardBackgroundColor="@color/violet"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/homefont"
                    android:text="@string/select_month"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/card_results"
                android:layout_below="@id/bar"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
              >



    <com.mlsdev.animatedrv.AnimatedRecyclerView
        android:id="@+id/rv_munths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="1dp"
        app:animationDuration="500"
        app:gridLayoutManagerColumns="3"
        android:layout_gravity="center"
        android:layout_above="@id/card_delete"
        app:layoutAnimation="@anim/layout_animation_from_bottom_scale"
        app:layoutManagerOrientation="vertical"
        app:layoutManagerReverse="false"
        app:layoutManagerType="grid">

    </com.mlsdev.animatedrv.AnimatedRecyclerView>




                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:id="@+id/card_delete"
                  android:layout_alignParentBottom="true"

                   >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_delete_all"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="1dp"
                        app:cardBackgroundColor="#fd6b6b"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintWidth_percent=".40">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView

                                android:layout_width="wrap_content"
                                android:layout_height="37dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="12dp"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/ic_rip_" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/delete_all"
                                android:fontFamily="@font/homefont"
                                android:textColor="@color/white"
                                android:textSize="15sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/card_addSllary"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="1dp"
                        app:cardBackgroundColor="#4bc185"
                        app:cardCornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent=".59">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="3">

                            <LinearLayout


                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_weight="1.70"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tv_solary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawablePadding="5dp"
                                    android:fontFamily="@font/homefont"
                                    android:gravity="center"
                                    android:padding="5dp"
                                    android:text="@string/add_solary"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />


                            </LinearLayout>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/line2"
                                android:layout_width="4dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="8dp"
                                app:cardBackgroundColor="@color/white"
                                app:cardCornerRadius="5dp"
                                app:cardElevation="@null"
                                app:layout_constraintTop_toBottomOf="@id/ed_tyb" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1.25"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="5dp">

                                <ImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:layout_gravity="center"
                                    android:padding="10dp"
                                    android:fontFamily="@font/homefont"
                                    app:srcCompat="@drawable/ic_calendar"
                                    android:text="@string/all_outaly"
                                    android:textColor="@color/white"
                                    android:textSize="20dp" />


                            </LinearLayout>
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/bluelighit"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="3">

                    <LinearLayout


                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1.30"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_results"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawableLeft="@drawable/ic_dollar"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/homefont"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="00.0"
                            android:textColor="@color/white"
                            android:textSize="25dp" />


                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/line"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="@null"

                        app:layout_constraintTop_toBottomOf="@id/ed_tyb" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.70"
                        android:gravity="center"

                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/homefont"
                            android:text="@string/all_outaly"
                            android:textColor="@color/white"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/homefont"
                            android:text="@string/in_year"
                            android:textColor="@color/yallow"
                            android:textSize="18dp" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </RelativeLayout>


    </LinearLayout>
</layout>